<resources>
    <string name="app_name">MCPE mods - minecraft guns mod</string>

    <string name="fashion">Mods</string>
    <string name="instruction">Instructions</string>
    <string name="settings">Settings</string>
    <string name="ad_attribution">AD</string>
    <string name="title">Mod Installation</string>
    <string name="supporting_text">To start the installation, you need to download the mod. Start the download?</string>
    <string name="accept">Download</string>
    <string name="decline">Decline</string>
    <string name="q">To use the add-on, you need to activate Experimental gameplay in the world settings</string>
    <string name="w">Magical Wands</string>
    <string name="n_n_magical_wands_9">Minecraft Bedrock is quite an unusual place to live for users. Different creatures and things are encountered. But unfortunately, there is not much magic in the game. Sometimes this is sorely lacking. Therefore, one of the fans decided to change this. \n\nThe Magical Wands mod adds 9 variations of wands to the game. Each of them will help players use different types of magic. They can even be crafted during survival mode from available materials. Crush your enemies with new abilities!</string>
    <string name="e">Withering Wand</string>
    <string name="t">Applies Wither effect.</string>
    <string name="y">Air Wand</string>
    <string name="u">Allows levitation.</string>
    <string name="i">Disease Wand</string>
    <string name="o">Applies negative effect.</string>
    <string name="p">Freezing Wand</string>
    <string name="a">Significantly slows down opponents.</string>
    <string name="s">Poison Wand</string>
    <string name="sq">Elemental Swords</string>
    <string name="d">Each attack poisons the opponent.</string>
    <string name="g">Fire Wand</string>
    <string name="j">Explodes the designated area.</string>
    <string name="k">Healing Wand</string>
    <string name="fa">Helps restore health.</string>
    <string name="h">Strength Wand</string>
    <string name="m">Applies Strength III effect on the player and nearby friends.</string>
    <string name="l">Regeneration Wand</string>
    <string name="kt">Applies Regeneration II effect on the player.</string>
    <string name="vv">Experimental Gameplay must be enabled in the world settings for the addon to work</string>
    <string name="hhh">Works on versions</string>
    <string name="n_12_n_n_n">\n Attack: 12 \n Lightning strikes on impact \n Appears in place of the regular Trident \n Dropped by the Drowned</string>
    <string name="hhh4">Thunder Trident</string>
    <string name="_15_n_n_n">Attack: 15\n Cooldown: Fast \nLightning strikes where a projectile hits \nProjectiles are infinite</string>
    <string name="b">Thunder Bow</string>
    <string name="minecraft_n_n_thunder_weapons_3">Sometimes the standard weapons in Minecraft become scarce. It would be cool if the developers of the cubic world were constantly adding something new, but everything is not so simple. So for now, add-ons will have to be used. \n\nAfter installing the Thunder Weapons mod, 3 new weapons will appear in the game that give thunder powers. Users have the ability to craft them while surviving.</string>
    <string name="ur">Thunder Weapon</string>
    <string name="yh">Experimental Gameplay must be enabled in the world settings for the addon to work</string>
    <string name="hhh6">Thunder Sword</string>
    <string name="n_14_n_10_n_n_n">\n Attack: 14 \n Attacks everyone within 10 blocks with lightning \n Increases speed when equipped \n Enchant \n Powerful weapon that quickly destroys enemies</string >
    <string name="oi">Changes in new version</string>
    <string name="kk1">\n Slightly changed the work of the Trident \n Fixed the work of some items \n Improved the crafting of items</string>
    <string name="llll">Experimental Gameplay must be enabled in the world settings for the addon to work</string>
    <string name="jjjj">Works on versions</string>
    <string name="o77">Sometimes the standard weapons in Minecraft are not enough. It would be cool if the developers of the cubic world were constantly adding something new, but everything is not so simple. Therefore, for now, you will have to use additions</string>
    <string name="dsds">Most mods on the internet will have the .mcpack and .mcworld file extensions. This type of files will automatically install add-ons to your Minecraft PE. \n1. First, make sure you have the latest version of ES File Explorer \n2 installed. After downloading the mod, open ES File Explorer \n3. Navigate to the downloads folder \n4. Find the .mcpack or .mcworld file, click on it and wait for the file to install the necessary elements in your Minecraft Pocket Edition. The screen may go black for a few seconds, but don\'t worry, it\'s just a small \n5 loading. But that\'s not all: after adding the mod, you need to change the resource pack and / or the pack of mob behavior when creating a new world in the Minecraft Pocket Edition settings</string>
    <string name="minecraft_pocket_edition">This guide will show you how to install Minecraft Pocket Edition mods on your Android phone.</string>
    <string name="bb">Check for updates before loading mod</string>
    <string name="hhhh">Premium Subscription Discount</string>
    <string name="hr">29:42</string>
    <string name="minecraft_bedrock_machetes_6">Tired of using the Sword and Ax to fight in Minecraft Bedrock? Want something new and cool? It\'s time to use the new weapon with the Machetes mod. There will be 6 variants of Machete in the game. They are made from different materials and have unique characteristics. The damage and recipe is different from the Sword. Everything is shown in more detail below.</string>
    <string name="ou">Recipe</string>
    <string name="ppp">Appropriate materials are used to create other variants</string>
    <string name="pppuu">Wooden</string>
    <string name="fff">Duration: 60 Damage: 6</string>
    <string name="jjj">Stone</string>
    <string name="jjjjjj">Duration: 132 Damage: 8</string>
    <string name="jjjjyy">Iron</string>
    <string name="bmgvhbmv">Durability: 251 Damage: 9</string>
    <string name="zxcv">Gold</string>
    <string name="sdf">Durability: 33 Damage: 7</string>
    <string name="sdfg">Diamond</string>
    <string name="dsf">Durability: 1562 Damage: 10</string>
    <string name="dsfg">Netherite</string>
    <string name="sfdg">Durability: 2032 Damage: 11 Crafted like other Netherite items</string>
    <string name="sdfgrr">Works on versions</string>
    <string name="rt">Machete</string>
    <string name="rtet34t">Thunder Weapon</string>

    <string name="rtet34t222">Many firearms</string>
    <string name="rtet34t2ww22">All the details are worked out to the smallest detail. Shooting will depend on running, walking, jumping, recoil and many other parameters that will have to be taken into account</string>

    <string name="a1">Minecraft Bedrock is a rather unusual place for users to live. There are completely different beings and things. But, unfortunately, there is little magic in the game. Sometimes this is sorely lacking. So one of the fans decided to change it</string>
    <string name="a2">Rifles</string>
    <string name="a3">Ranged weapons help players in all battles and battles in MCPE. Usually, after a few shots, you have to finish off opponents with melee weapons. It\'s time to change that</string>
    <string name="a4">ALF weapons</string>
    <string name="a5">The theme of firearms in Minecraft Bedrock excites many. The developers have not yet added even the simplest firearms, so we offer the Armed Technology of ALF mod</string>
    <string name="a6">The Elemental Swords mod adds 4 new swords to the game. Each of them symbolizes a certain element and has strong effects for Minecraft. There are currently 5 primary weapons available: Air, Fire, Water, Earth, and Soulfire</string>
    <string name="a7">Spider-Man Universe</string>
    <string name="a8">There are different versions of the Spider-Man universe. All of them are exciting. I want to immerse myself in this world over and over again. We offer to go further and become a part of it in Minecraft Pocket Edition</string>
    <string name="a9">3D Realistic Weapon</string>
    <string name="a10">Everyone thought about what would happen if firearms were added to Minecraft PE. There are many mods that add weapons to the cubic world, but not everyone boasts of a study. The ActualGuns 3D mod is an exception</string>
    <string name="a11">Lucky Block Mini-Game</string>
    <string name="a12">The most fun races and exciting competitions with friends will be presented by the LuckyBlocksRace map in Minecraft Pocket Edition. Get to the finish line first, overcoming the track filled with various obstacles</string>
    <string name="a13">100 Level Parkour Map</string>
    <string name="a14">Here you will find as many as 100 levels for yourself, which have their own characteristics and special design. Each level in Minecraft PE has a special ending, so don\'t be lazy and complete it</string>
    <string name="a15">I\'ve been in arbitrage for a long time, I wrote all sorts of scams, but the floor of the add-on consists of pictures</string>
    <string name="a16">You can light up any place just by holding a torch. This light is enough to find various types of ores and mine them</string>
    <string name="a17">Demon Slayer</string>
    <string name="a18">The Demon Slayer Blade anime and manga have become incredibly famous. The unique abilities of the characters are the envy of ordinary users. We invite users to try out the powers of heroes in Minecraft Bedrock</string>
    <string name="a19">Minecraft PE furniture</string>
    <string name="a20">The mod adds 500 items to decorate your home. In Minecraft will appear: furniture, items for decoration, household appliances, the ability to start a family and much more</string>
    <string name="a21">Poppy Playtime 2</string>
    <string name="a22">Poppy Playtime has been around for a long time. Players are more and more imbued with this world. There are even craftsmen who transfer monsters from there to Minecraft Pocket Edition</string>





</resources>